Changed misspelled word
Recommended

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 	
 	<h3>Wattage Value Saved</h3>
 	<p> Wattage: <value id="wattValue"></value></p>
-	<input type='button' onclick='getProducts();' value='Find Reccomended Products'></button>
+	<input type='button' onclick='getProducts();' value='Find Recommended Products'></button>
 	<ul id="productList">
 	</ul>
 </body>
