Added button to save SCFM

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <input type='button' onclick='calculationValidate(1);' value='Calculate!'></button>
     <input type='button' onclick='clearAll();' value='Clear'></button>
 	<input type='button' onclick='saveWattage();' value='Save Wattage'></button>
+	<input type='button' onclick='saveSCFM();' value='Save SCFM'></button>
     
     <h3>TEMPERATURE CONVERSION CALCULATOR</h3>
 	<p>Enter °C</p>
