--- a/index.html
+++ b/index.html
@@ -77,6 +77,8 @@
 	
 	<h3>Wattage Value Saved</h3>
 	<p> Wattage: <value id="wattValue"></value></p>
+	<h3>SCFM Value Saved</h3>
+	<p> SCFM: <value id="SCFMValue"></value></p>
 	<input type='button' onclick='getProducts();' value='Find Recommended Products'></button>
 	<ul id="productList">
 	</ul>
