Added a button to clear product list

--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
 	<h3>SCFM Value Saved</h3>
 	<p> SCFM: <value id="SCFMValue"></value></p>
 	<input type='button' onclick='getProducts();' value='Find Recommended Products'></button>
+	<input type='button' onclick='clearAll();' value='Clear'></button>
 	<ul id="productList">
 	</ul>
 </body>
