Fixed a bunch of stuff
making buttons work, adding code, saving user inputs, ect.

--- a/heattransfer.html
+++ b/heattransfer.html
@@ -67,7 +67,7 @@
 
 
 
-<input class="reset" type='button' onclick='clearAll();' value='RESET'></button>
+<input class="reset" type='button' onclick='clearAll(6);' value='RESET'></button>
 
     <input class="calculate" type='button' onclick='calculationValidate(6);' value='CALCULATE'></button>
 
