--- a/ohmslaw.html
+++ b/ohmslaw.html
@@ -62,7 +62,7 @@
 
 
 
-<input class="reset" type='button' onclick='clearAll();' value='RESET'></button>
+<input class="reset" type='button' onclick='clearAll(5);' value='RESET'></button>
 
     <input class="calculate" type='button' onclick='calculationValidate(5);' value='CALCULATE'></button>
 
