--- a/powerflowrate.html
+++ b/powerflowrate.html
@@ -54,11 +54,11 @@
     <div class="clearspacer"></div>
     
 	<p id='1-answer'></p>
-<a href="products.html">
+    <a href="products.html">
 <input class="reccomend" type='button' onclick='getProducts();' value='SEE RECOMMENDATIONS'></button>
 </a>
 
-<input class="reset" type='button' onclick='clearAll();' value='RESET'></button>
+<input class="reset" type='button' onclick='clearAll(1);' value='RESET'></button>
 
     <input class="calculate" type='button' onclick='calculationValidate(1);' value='CALCULATE'></button>
 
