--- a/tempconvert.html
+++ b/tempconvert.html
@@ -51,7 +51,7 @@
 	<p id='1-answer'></p>
 
 
-<input class="reset" type='button' onclick='clearAll();' value='RESET'></button>
+<input class="reset" type='button' onclick='clearAll(2);' value='RESET'></button>
 
     <input class="calculate" type='button' onclick='calculationValidate(2);' value='CALCULATE'></button>
 
