--- a/threephase.html
+++ b/threephase.html
@@ -57,7 +57,7 @@
 
 
 
-<input class="reset" type='button' onclick='clearAll();' value='RESET'></button>
+<input class="reset" type='button' onclick='clearAll(3);' value='RESET'></button>
 
     <input class="calculate" type='button' onclick='calculationValidate(3);' value='CALCULATE'></button>
 
