--- a/payment.html
+++ b/payment.html
@@ -3,10 +3,10 @@
     <head>
         <meta charset="utf-8" />
         <meta name="format-detection" content="telephone=no" />
-        <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height" />
+        <meta name="viewport" content="user-scalable=no, initial-scale=1, height=device-height" />
         <title>Payroll Calc</title>
     </head>
-    <body style = "height:100vh;">
+    <body >
         <div id="head" style="height:20%; background-color:#f27f65;">
             <center>
             <div id="head-title" style="padding:3px;font-size:9vh;">
