--- a/payment.html
+++ b/payment.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8" />
         <meta name="format-detection" content="telephone=no" />
         <meta name="viewport" content="user-scalable=no, initial-scale=1, height=device-height" />
+        <link rel="icon" href="http://www.origami-resource-center.com/images/paper-Crane-wiki.jpg">
         <title>Payroll Calc</title>
     </head>
     <body >
