--- a/payment.html
+++ b/payment.html
@@ -5,6 +5,10 @@
         <meta name="format-detection" content="telephone=no" />
         <meta name="viewport" content="user-scalable=no, initial-scale=1, height=device-height" />
         <link rel="icon" href="http://www.origami-resource-center.com/images/paper-Crane-wiki.jpg">
+        <link rel="apple-touch-icon" sizes="57x57" href="57.png" />
+        <link rel="apple-touch-icon" sizes="72x72" href="72.png" />
+        <link rel="apple-touch-icon" sizes="114x114" href="114.png" />
+        <link rel="apple-touch-icon" sizes="144x144" href="144.png" />
         <title>Payroll Calc</title>
     </head>
     <body >
