--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
     <body>
         hi
         <a href="mycoolapp://">Open my app</a>
+        <a href="govely://">Open Govely</a>
     </body>
 </html>
