--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <div id="header">
-        <h2>Portfolio for Jae Lee - <a href="mailto:jaemlee1997@gmail.com">jaemlee1997@gmail.com</a></h2>
+        <h2>*WORK IN PROGRESS* Portfolio for Jae Lee - <a href="mailto:jaemlee1997@gmail.com">jaemlee1997@gmail.com</a></h2>
         
         <table>
             <tr>
