Made clear form scroll to top of document

--- a/payment.html
+++ b/payment.html
@@ -183,6 +183,7 @@
             
             function showOnlyResults(){
                 document.getElementById("body").innerHTML = document.getElementById("timestamp_over").innerHTML;
+                document.documentElement.scrollTop = 0;
             }
             
             function clearFields(){
