--- a/paymentv2.html
+++ b/paymentv2.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8" />
         <meta name="format-detection" content="telephone=no" />
         <meta name="viewport" content="user-scalable=no, initial-scale=1, height=device-height" />
-        <link rel="icon" href="http://www.origami-resource-center.com/images/paper-Crane-wiki.jpg">
+        <link rel="icon" href="JML Logo.png">
         <link rel="apple-touch-icon" sizes="57x57" href="57.png" />
         <link rel="apple-touch-icon" sizes="72x72" href="72.png" />
         <link rel="apple-touch-icon" sizes="114x114" href="114.png" />
