Making overtime optional

--- a/paymentv2.html
+++ b/paymentv2.html
@@ -222,12 +222,14 @@
 
                         <br>
                         
+			<div id="optional-overtime">
                         <div id="datablock">
                             <div id="datablock-content">
                                 Overtime: 
                                 <span id="overtimeContent"></span>
                             </div>
                         </div>
+			</div>
 
                         <br>
                     </div>
