Added for private use on the TOS statement

--- a/paymentv2.html
+++ b/paymentv2.html
@@ -244,7 +244,7 @@
                 </div>
             </div>
             <div id="footer">
-                <center><p style="font-size:1vh">By using the calculator application, you agree that creator of this application (the owner of the github account this website is hosted on) free of any liability from miscalculation or other issues that may occur from said use of the application. This application in no way guarantees any service or behavior or accuracy, I don't recommend you using it. </p></center>
+                <center><p style="font-size:1vh">This application is inteded for private use. By using the calculator application, you agree that creator of this application (the owner of the github account this website is hosted on) free of any liability from miscalculation or other issues that may occur from said use of the application. This application in no way guarantees any service or behavior or accuracy, I don't recommend you using it. </p></center>
             </div>
             
         </div>
